﻿===v6.0.4===
 * The Buff Efficiency Threshold setting is back.
 * Changed all file encodings to UTF-8 in hopes of fixing the problems that many users are having.
 * Added a dropdown menu to select an icon when right clicking an an icon that has other icons underneath it.
 * New condition: Spell charge time.
 * Bug fixes:
 ** Minimum group frame level is now 5 instead of 1 to prevent issues caused at low frame levels.
 ** Increased the delay on LoadFirstValidIcon from 0.1 seconds to 0.5 seconds in hopes of preventing the AceCD:804 error more often.
 ** Soul shard condition maximum has been increased to 4 (from 3).
 ** The lightwell icon type should now work properly with the Lightspring glyph.
 ** Tried again to fix the AceCD:804 error. Probably didn't succeed.
 ** Fixed an incorrect spellID for Spirit Beast Blessing in the IncreasedMastery equivalency.
 ** Groups should now properly show/hide as needed when you change between primary/secondary talents specializations when both specializations are the same.
 ** Condition Object Constructors are now much more reliable (at the cost of some garbage churn when running TMW:Update())
 
===v6.0.3===
 * Re-implemented the stance condition for paladin seals.
 * Minor updates for some buff/debuff equivalancies. Still need help getting these completely up to date, though! If you notice something missing, please let me know!
 * You can now change the event of an event handler once it has been created.
 * New setting for Combat Event icons - Don't Refresh.
 * Added Raid Finder to the Instance Type condition.
 * You can now output text to the UI Errors Frame.
 * Moved the Timers ignore GCD & Bars ignore GCD settings from per-profile to per-icon.
 * Updated Unit Cooldown icons for all cooldown resets in MoP.
 * DR categories should now be complete for MoP. Please report any missing spells.